include $(srcdir)/../../Makefile.common

EXTRA_DIST = $(srcdir)/all_pcp.real $(srcdir)/connections.real	\
$(srcdir)/latency.real $(srcdir)/pcp.real rma.real		\
$(srcdir)/arinc_secure.real $(srcdir)/independant_flows.real	\
$(srcdir)/memory_size.real periodic_tasks.real			\
$(srcdir)/stack_size.real $(srcdir)/bus_rate.real		\
independant_threads.real $(srcdir)/mutexes.real			\
$(srcdir)/processes.real $(srcdir)/unique_call.real



